AUTOMAKE_OPTIONS = foreign
SUBDIRS = src
lib_LTLIBRARIES = libtabby.la
libtabby_la_SOURCES =
libtabby_la_LDFLAGS = -version-info 1:1:1
libtabby_la_LIBADD = \
         src/list/liblist.la

include_HEADERS = \
         include/tabby_atom.h  \
         include/tabby_list.h  \
         include/tabby_lock.h  \
         include/tabby_types.h
